# rwkit

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  python-publish.yml
rwkit/: __init__.py  common.py  docx.py  generic.py  io_json.py  io_text.py  io_yaml.py  json.py  rw_yaml.py  text.py  yaml.py
tests/: test_common.py  test_docx.py  test_generic.py  test_io_json.py  test_io_text.py  test_io_yaml.py  test_json.py  test_text.py  test_yaml.py
