[tool.poetry]
name = "rwkit"
version = "1.0.2"
description = ""
authors = ["David Adametz <20501597+david-adametz@users.noreply.github.com>"]
repository = "https://github.com/neural-tools/rwkit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
zstandard = {version = ">=0.15.0", optional = true}
pyyaml = {version = ">=5.1.2", optional = true}

[tool.poetry.extras]
zstd = ["zstandard"]
yaml = ["pyyaml"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
tox = "^4.18.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
